# api/model/zz_generated.deepcopy.go
@@ -21,6 +21,8 @@ limitations under the License.
 
 package model
 
+import ()
+
 // DeepCopyInto is an autogenerated deepcopy function, copying the receiver, writing into out. in must be non-nil.
 func (in *APICatalogue) DeepCopyInto(out *APICatalogue) {
 	*out = *in
@@ -107,6 +109,7 @@ func (in *APIDefinitionSpec) DeepCopyInto(out *APIDefinitionSpec) {
 	}
 	out.VersionDefinition = in.VersionDefinition
 	in.VersionData.DeepCopyInto(&out.VersionData)
+	out.GlobalRateLimit = in.GlobalRateLimit
 	in.CustomMiddleware.DeepCopyInto(&out.CustomMiddleware)
 	in.CacheOptions.DeepCopyInto(&out.CacheOptions)
 	if in.AllowedIPs != nil {
@@ -143,6 +146,11 @@ func (in *APIDefinitionSpec) DeepCopyInto(out *APIDefinitionSpec) {
 	if in.ConfigData != nil {
 		in, out := &in.ConfigData, &out.ConfigData
 		*out = (*in).DeepCopy()
+	}
+	if in.TagHeaders != nil {
+		in, out := &in.TagHeaders, &out.TagHeaders
+		*out = make([]string, len(*in))
+		copy(*out, *in)
 	}
 	if in.GraphQL != nil {
 		in, out := &in.GraphQL, &out.GraphQL
