# config/crd/bases/tyk.tyk.io_apidefinitions.yaml
@@ -419,6 +419,14 @@ spec:
                 - location
                 - strip_path
                 type: object
+              disable_quota:
+                description: DisableQuota allows you to disable quota middleware in
+                  a given API Definition.
+                type: boolean
+              disable_rate_limit:
+                description: DisableRateLimit allows you to disable rate limits in
+                  a given API Definition.
+                type: boolean
               do_not_track:
                 description: DoNotTrack disables endpoint tracking for this API
                 type: boolean
@@ -450,6 +458,21 @@ spec:
                 type: boolean
               enable_proxy_protocol:
                 type: boolean
+              global_rate_limit:
+                description: GlobalRateLimit is an API Level Global Rate Limit, which
+                  assesses all traffic coming into the API from all sources and ensures
+                  that the overall rate limit is not exceeded.
+                properties:
+                  per:
+                    description: A Number represents a JSON number literal.
+                    type: string
+                  rate:
+                    description: A Number represents a JSON number literal.
+                    type: string
+                required:
+                - per
+                - rate
+                type: object
               graphql:
                 description: GraphQLConfig is the root config object for a GraphQL
                   API.
@@ -965,6 +988,10 @@ spec:
                 description: StripAuthData ensures that any security tokens used for
                   accessing APIs are stripped and not leaked to the upstream
                 type: boolean
+              tag_headers:
+                items:
+                  type: string
+                type: array
               tags:
                 description: Tags are named gateway nodes which tell gateway clusters
                   whether to load an API or not. for example, to load the API in an
@@ -1874,9 +1901,13 @@ spec:
                 - not_versioned
                 type: object
             required:
+            - disable_quota
+            - disable_rate_limit
+            - global_rate_limit
             - name
             - protocol
             - proxy
+            - tag_headers
             type: object
           status:
             description: ApiDefinitionStatus defines the observed state of ApiDefinition
